src/objects/NVMContactWorld__DispositionCodes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>NVMContactWorld__CallOutcomeMapping__c</fullName>
        <inlineHelpText>Call outcome mapping for automatically setting disposition codes.</inlineHelpText>
        <label>Call outcome mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Connected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Value indicating whether the disposition code should result in the agent moving to the next entry.</inlineHelpText>
        <label>Progress to next record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ProgressionMode__c</fullName>
        <inlineHelpText>Value indicating the mode of progression in the Connect dialler.</inlineHelpText>
        <label>Progression Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Disposition Codes</label>
</CustomObject>